- Logtype "Unshadowbans" added.
- "Violet" color has been darkened for some log events.
- Logtype "UserIsBanned" has been renamed to "bans".
- Logtype "UserIsUnbanned" has been renamed to "unbans".
- Fixed a bug where the ServerMessageLog file would get corrupted, resulting in the messageupdated and messagedeleted logtypes being rendered useless.

Version 1.15.1

- $h redeem command added.
- $h diamonds command added.
- $h supporter command added.
- $supporter and $diamonds commands added.

Version 1.15

- Kaguya Supporter!
    - With the supporter program, users may purchase "keys" that can be redeemed in chat!
    - These keys are one time use, so it is safe to use them in a public chat.
    - This is NOT a recurring subscription!
    - These keys grant you "supporter" status for 30, 60, or 90 days.
    - The keys stack, so if you wish to purchase multiple keys you may! You may also give them away if you wish.
- What does a supporter get?
    - Supporters get a few small perks.
    - Supporters get a stackable 2x critical hit ratio (stacks with the 2x $voteclaim bonus)
    - Supporters have no "gamble limit" (it's 25,000 for normal users).
    - Supporters get a special "supporter" Discord role. (Not automated right now, but it will be soon. I'll do it manually until then.)
    - Supporters receive 600 "Kaguya Diamonds" per month of their supporter.
        - Kaguya Diamonds are a premium currency that are non-transferrable and cannot be gambled.
        - I will come up with a use for these sooner than later.
    - As a supporter, you get the snuggly feeling that comes with knowing you're helping keep Kaguya online.
    - More perks are coming in the future!
- Where can I purchase the keys?
    - All keys can be purchased directly through https://stageosu.selly.store/. This is the ONLY place you can buy keys!
    - Keys may be purchased through PayPal. You may also use Bitcoin and Ethereum.
    - More information on the perks can be found on that page!